@@ -1,5 +1,6 @@
 * New in version 1.0.0
 ** Complete re-write of idleconn.c to use libevent notification system
+** idleconn is now optional (--enable-idleconn)
 
 * New in version 0.9.1:
 ** timer re-write to reduce memory and fix memory leaks 
