@@ -1,3 +1,8 @@
+2008-04-11  Ted Bullock <tbullock@canada.com>
+
+	* configure.ac, src/Makefile.am: Make automake compilation optional,
+	use --enable-idleconn. This will require libevent.
+
 2008-01-31  Ted Bullock <tbullock@canada.com>
 
 	* src/idleconn.c: Complete rewrite to use libevent backend; slight
